# MonitorMBG

./: .gitignore  AGENTS.md  dev.sh  docker-compose.yml  package-lock.json
backend/: .env-example  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260122080854_init.sql
backend/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs
backend/src/auth/: handlers.rs  middleware.rs  mod.rs  utils.rs
backend/src/database/: error.rs  mod.rs  model.rs  table.rs
backend/src/db/: model.rs  table.rs
backend/src/middleware/: rate_limit.rs
backend/src/routes/: auth.rs  incident.rs  kitchen.rs  mod.rs  review.rs  stats.rs  utility.rs
backend/src/service/: auth.rs  incident.rs  kitchen.rs  mod.rs  otp.rs  review.rs  stats.rs  storage.rs  utility.rs  whatsapp.rs
backend/tests/: auth_integration.rs  auth_security_test.rs  auth_test.rs  db_table_test.rs  incident_test.rs  kitchen_test.rs  review_test.rs  utility_test.rs
backend/tests/common/: mod.rs
docs/: api-schema.md  architecture.md  backend-development.md  frontend-development.md
docs/diagrams/: authentication-flow.mmd  backend-architecture.mmd  database-schema.mmd  deployment-architecture.mmd  frontend-architecture.mmd  request-lifecycle.mmd  service-layer-pattern.mmd  system-overview.mmd  ui-flow.mmd
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BottomNavigation.tsx  ConfidenceBadge.tsx  DisputePanel.tsx  EducationMode.tsx  HACCPChart.tsx  HotlineButton.tsx  HotlineModal.tsx  IncidentMap.tsx  IncidentMapEducation.tsx  KitchenDetail.tsx  KitchenList.tsx  LocationFilter.tsx  MobileMapModal.tsx  NotificationPanel.tsx  OpenDataAPI.tsx  OpenDataStats.tsx  PerformanceBadges.tsx  PublicDashboard.tsx  ResponsiveMapContainer.tsx  ReviewCard.tsx  ReviewForm.tsx  RootCauseTag.tsx  TrendAnalysis.tsx  VideoEducation.tsx
frontend/src/styles/: globals.css
(+6 files in other folders)
