[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.29"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "sqlite", "tls-native-tls", "uuid", "rust_decimal"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.36", features = ["db-postgres"] }
axum = { version = "0.8.8", features = ["multipart"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.9.2"
tower = { version = "0.5.3", features = ["util", "limit"] }
governor = "0.6.3"
object_store = { version = "0.12", features = ["aws"] }
bytes = "1.9"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.11"

[lints.clippy]
new_without_default = "allow"

[dev-dependencies]
httpmock = "0.7.0"
mockall = "0.13.0"

